--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,8 +58,9 @@ button {
 
 .is-navbar-up .navbar {transform:translateY(calc(-1 * var(--navbar-height)));}
 
-.is-fixed-home-tablist .navbar {transform:translateY(0);}
-.is-fixed-home-tablist .home-tablist {position:fixed;top:0;z-index:7;transform:translateY(var(--navbar-height));}
+/* .is-fixed-home-tablist .navbar {transform:translateY(0);} */
+/* .is-fixed-home-tablist .home-tablist {position:fixed;top:0;z-index:7;transform:translateY(var(--navbar-height));} */
+.is-fixed-home-tablist .home-tablist {position:fixed;top:0;z-index:9;}
 
 .is-fixed-home-tablist.is-navbar-up .navbar {transform:translateY(calc(-1 * var(--navbar-height)));}
 .is-fixed-home-tablist.is-navbar-up .home-tablist {transform:translateY(0);}
@@ -228,7 +229,7 @@ button {
 
 /* todo size  % */
 .tabpanel4-1-wrap {width:51%;max-width:612px;position:absolute;animation:none;}
-.is-observed .tabpanel4-1-1 {max-width:271px;box-shadow:var(--shadow400);position:relative;left:0;top:0;z-index:2;}
+.is-observed .tabpanel4-1-1 {max-width:271px;position:relative;left:0;top:0;z-index:2;}
 .is-observed .tabpanel4-1-2 {max-width:311px;position:absolute;right:12%;top:23%;z-index:3;animation:fadeup var(--animation-duration) 1.4s both;}
 .is-observed .tabpanel4-1-3 {max-width:377px;position:absolute;right:5px;bottom:26px;z-index:4;animation:fadeup var(--animation-duration) 1.8s both;}
 
