--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,7 +56,7 @@ button {
 .navbar.is-fixed {position:fixed;left:0;right:0;top:0;}
 .navbar-backdrop {height:var(--navbar-height);}
 
-.is-navbar-up .navbar {transform:translateY(calc(-1 * var(--navbar-height)));}
+/* .is-navbar-up .navbar {transform:translateY(calc(-1 * var(--navbar-height)));} */
 
 /* .is-fixed-home-tablist .navbar {transform:translateY(0);} */
 /* .is-fixed-home-tablist .home-tablist {position:fixed;top:0;z-index:7;transform:translateY(var(--navbar-height));} */
