--- a/public/stylesheets/abstracts/variables.css
+++ b/public/stylesheets/abstracts/variables.css
@@ -30,9 +30,9 @@
   --body: 1rem;
   --caption: .875rem;
   
-  --weight-normal: 400;
+  --font-weight-normal: 400;
   --font-weight-bold: 600;
-  --weight-extrabold: 800;
+  --font-weight-extrabold: 800;
 
   --container-medium: 640px;
   --container-large: 1440px;
