--- a/public/stylesheets/pages/apply.css
+++ b/public/stylesheets/pages/apply.css
@@ -35,7 +35,7 @@
 .is-observed.apply-hero figure {animation:fadeup var(--animation-duration) linear 1.2s both;}
 
 .apply-intro {}
-.apply-intro-inner {display:flex;flex-wrap:wrap;justify-content:space-evenly;max-width:1200px;margin:0 auto;padding:100px 0 124px;background:#fff;border-radius:20px;box-shadow:var(--shadow400);}
+.apply-intro-inner {display:flex;flex-wrap:wrap;justify-content:space-evenly;max-width:1200px;margin:0 auto;padding:100px 0 124px;background:#fff;border-radius:20px;box-shadow:var(--shadow400);position:relative;}
 .apply-intro-inner header {width:100%;margin:0 0 61px 0;text-align:center;}
 .apply-intro-inner header > span {display:block;width:60px;margin:0 auto;}
 .apply-intro-inner header h2 {margin:34px 0 0;font-size:40px;}
@@ -64,7 +64,7 @@
 .is-observed .apply-benefit-inner figure {animation:fadeup var(--animation-duration) linear 1.2s both;}
 
 .apply-how {padding:124px 0;background:#f9f9f9;}
-.apply-how-inner {max-width:1200px;margin:0 auto;}
+.apply-how-inner {max-width:1200px;margin:0 auto;position:relative;}
 .apply-how-inner header {width:100%;margin:0 0 60px 0;text-align:center;}
 .apply-how-inner header span {display:block;width:60px;margin:0 auto;}
 .apply-how-inner header h2 {margin:34px 0 24px;font-size:40px;}
@@ -183,7 +183,7 @@
 
   .apply-hero {
     padding: 82px 16px 0;
-    background: var(--color-primary);
+    background: url('../../images/apply/apply-hero-mobile.png') no-repeat center top #48A2F6;
   }
   .apply-intro {padding:0 16px;background:#ECF8FF;}
   .apply-intro-inner {display:block;padding-top:32px;padding-bottom:59px;}
@@ -197,9 +197,9 @@
 
 
 
-  .apply-benefit {padding:0 16px 0;}
+  .apply-benefit {padding:20px 16px 0;background:#ECF8FF;}
   /* .apply-benefit-inner {margin:0 auto 0;padding:32px 0 70px;} */
-  .apply-benefit-inner {margin:20px auto 20px;padding:32px 0 70px;}
+  .apply-benefit-inner {margin:0 auto 20px;padding:32px 0 70px;}
   .apply-benefit-inner header {margin:0 0 40px 0;}
   .apply-benefit-inner header > span {display:block;width:8.74635568513%;margin:0 auto;}
   .apply-benefit-inner header h2 {margin:24px 0 41px;font-size:24px;line-height:32px;}
@@ -213,7 +213,7 @@
   
 
   .apply-how {padding:32px 16px 50px;}
-  .apply-how-inner {display:block;}
+  .apply-how-inner {display:block;position:relative;}
   .apply-how-inner header {margin-bottom:30px;}
   .apply-how-inner header span {width:8.74635568513%;}
   .apply-how-inner header h2 {margin-top:25px;margin-bottom:16px;font-size:24px;}
