--- a/public/stylesheets/components/hero.css
+++ b/public/stylesheets/components/hero.css
@@ -6,7 +6,7 @@
 
 .hero-title {margin:0 0 1rem 0;font-size:2.5rem;font-weight:var(--font-weight-bold);}
 .hero-description {}
-.hero-cta {display:flex;align-items:center;justify-content:center;width:260px;height:56px;margin:3rem 0 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-size:18px;font-weight:800;}
+.hero-cta {display:flex;align-items:center;justify-content:center;width:260px;height:56px;margin:3rem 0 0;border-radius:50px;box-shadow:var(--shadow400);text-align:center;background:var(--yellow);color:var(--gray0);font-size:18px;font-weight:800;}
 
 .hero-object-group {height:100%;position:absolute;right:-19rem;top:-8rem;}
 .hero-object-group-inner {position:relative;}
@@ -29,7 +29,7 @@
 .home-cta {display:flex;justify-content:center;padding:0 5%;position:fixed;left:0;right:0;bottom:calc(constant(safe-area-inset-bottom) + 2rem);bottom:calc(env(safe-area-inset-bottom) + 2rem);z-index:9;transform:translateY(100px);transition:all .6s;opacity:0;}
 .home-cta-button {
 display:flex;align-items:center;justify-content:center;width:100%;max-width:450px;height:56px;margin:3rem 0 0;
-border-radius:50px;text-align:center;background:var(--yellow);font-size:18px;color:var(--gray0);font-weight:800;}
+border-radius:50px;text-align:center;background:var(--yellow);box-shadow:var(--shadow400);font-size:18px;color:var(--gray0);font-weight:800;}
 .home-cta.is-fixed {transform:translateY(0);opacity:1;}
 
 @media (max-width:1024px) {
@@ -37,9 +37,18 @@ border-radius:50px;text-align:center;background:var(--yellow);font-size:18px;col
     .hero-inner {padding-top:4rem;padding-bottom:4rem;}
     .hero-title {font-size:2rem;}
     .hero-object-group {position:static;right:auto;top:auto;}
-    .hero-object2 {width:120%;margin-left:-12%;}
-    .hero-object3 {right:-1rem;bottom:-15rem;}
+    .hero-object1 {top:-8%;}
+    .hero-object2 {width:120%;margin-left:-3%;margin-top:-9%;}
+    .hero-object3 {right:8%;bottom:-30%;}
 
     .hero-cta {width:220px;}
     .cta-arrow {width:11px;}
+}
+
+@media (max-width:800px) {
+    .hero-object1 {
+        top: -18%;
+        right: -6%;
+    }
+    .hero-object2 {margin-left:-12%;}
 }
