--- a/public/stylesheets/pages/apply.css
+++ b/public/stylesheets/pages/apply.css
@@ -8,7 +8,7 @@
 .apply-hero p {max-width:378px;margin:19px auto 0;}
 .apply-hero figure {max-width:626px;margin:20px auto 52px;}
 .apply-hero footer {}
-.apply-hero-cta {display:flex;align-items:center;justify-content:center;max-width:450px;height:56px;margin:3rem auto 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-size:18px;font-weight:800;}
+.apply-hero-cta {display:flex;align-items:center;justify-content:center;max-width:450px;height:56px;margin:3rem auto 0;border-radius:50px;text-align:center;background:var(--yellow);box-shadow:var(--shadow400);color:var(--gray0);font-size:18px;font-weight:800;}
 .apply-hero-objects {}
 .apply-hero-objects img {position:absolute;animation:pulse 2s ease infinite alternate;}
 .apply-hero-objects img:nth-of-type(1) {width:46px;left:-47px;top:335px;}
