--- a/public/stylesheets/pages/apply.css
+++ b/public/stylesheets/pages/apply.css
@@ -135,7 +135,13 @@
 .is-observed .apply-intro-inner header span {animation:fadeup var(--animation-duration) linear .4s both;}
 .is-observed .apply-intro-inner header h2 {animation:fadeup var(--animation-duration) linear .8s both;}
 .is-observed .apply-intro-inner header p {animation:fadeup var(--animation-duration) linear 1.2s both;}
-.is-observed .apply-intro-inner div:nth-of-type(1) span {animation:fadeup var(--animation-duration) linear 1.4s both;}
+.is-observed .apply-intro-inner div:nth-of-type(1) {animation:fadeup var(--animation-duration) linear 1.4s both;}
+.is-observed .apply-intro-inner .line1 {animation:fadeup var(--animation-duration) linear 1.5s both;}
+.is-observed .apply-intro-inner div:nth-of-type(2) {animation:fadeup var(--animation-duration) linear 1.6s both;}
+.is-observed .apply-intro-inner .line2 {animation:fadeup var(--animation-duration) linear 1.7s both;}
+.is-observed .apply-intro-inner div:nth-of-type(3) {animation:fadeup var(--animation-duration) linear 1.8s both;}
+/* // 각각 뜨는 것에서 전체 뜨느 ㄴ것으로 변경됨... */
+/* .is-observed .apply-intro-inner div:nth-of-type(1) span {animation:fadeup var(--animation-duration) linear 1.4s both;}
 .is-observed .apply-intro-inner div:nth-of-type(1) h3 {animation:fadeup var(--animation-duration) linear 1.6s both;}
 .is-observed .apply-intro-inner div:nth-of-type(1) p {animation:fadeup var(--animation-duration) linear 1.8s both;}
 .is-observed .apply-intro-inner .line1 {animation:fadeup var(--animation-duration) linear 1.9s both;}
@@ -145,7 +151,7 @@
 .is-observed .apply-intro-inner .line2 {animation:fadeup var(--animation-duration) linear 2.5s both;}
 .is-observed .apply-intro-inner div:nth-of-type(3) span {animation:fadeup var(--animation-duration) linear 2.6s both;}
 .is-observed .apply-intro-inner div:nth-of-type(3) h3 {animation:fadeup var(--animation-duration) linear 2.8s both;}
-.is-observed .apply-intro-inner div:nth-of-type(3) p {animation:fadeup var(--animation-duration) linear 3s both;}
+.is-observed .apply-intro-inner div:nth-of-type(3) p {animation:fadeup var(--animation-duration) linear 3s both;} */
 
 
 .is-observed .apply-how-inner .wrap > div .bg,
